--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <input type="text" id="city" class="form-control">
               </div>
               <div class="form-group">
-                  <label for="county">Country</label>
-                  <select class="form-control" id="county">
+                  <label for="country">Country</label>
+                  <select class="form-control" id="country">
                       <option>CA</option>
                       <option>US</option>
                       <option>AU</option>
@@ -69,6 +69,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!-- Custom JS -->
+    <script src="storage.js"></script>
     <script src="weather.js"></script>
     <script src="ui.js"></script>
     <script src="app.js"></script>
